--- a/styles.css
+++ b/styles.css
@@ -635,7 +635,7 @@ section {
     content: "";
     position: absolute;
     top: 10px;
-    right: 100px;
+    left: 100px;
     width: 100px;
     height: 100px;
     background: url("Minha mandala.png") no-repeat center/contain;
